--- a/views/site/index.hbs
+++ b/views/site/index.hbs
@@ -5,7 +5,7 @@
                 <div>
                     <div class="next-to-content" id="root">
                         <div class="accordion-node" id="timeline-div">
-                            Hey Qwann!
+                            <img src="public/images/Tonys.svg"></img>
                         </div>
                     </div>
                 </div>
