changed link of website

--- a/views/site/index.hbs
+++ b/views/site/index.hbs
@@ -5,7 +5,11 @@
                 <div>
                     <div class="next-to-content" id="root">
                         <div class="accordion-node" id="timeline-div">
-                            <img src="public/images/Tonys.svg"></img>
+                            <div class="logo-placement">
+                                <a class="square-link" href="https://squareup.com/appointments/book/0R104SMS6SK0C/tony-s-new-york-ny">
+                                    {{>logo}}
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
