--- a/views/site/index.hbs
+++ b/views/site/index.hbs
@@ -1,10 +1,17 @@
 <body>
     <div class="column">
+        <div class="nav right">
+            <div class="bookings">
+                <a class="square-link" href="https://squareup.com/appointments/book/0R104SMS6SK0C/tony-s-new-york-ny">
+                    Book Appointment
+                </a>
+            </div>
+        </div>
         <div class="index">
             <div class="width-wrap">
                 <div>
                     <div class="next-to-content" id="root">
-                        <div class="accordion-node" id="timeline-div">
+                        <div class="container-tile col col-md-12" id="timeline-div">
                             <div class="logo-placement">
                                 <a class="square-link" href="https://squareup.com/appointments/book/0R104SMS6SK0C/tony-s-new-york-ny">
                                     {{>logo}}
