--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,8 +8,39 @@ body {
 a {
   color: #00B7FF;
 }
-div.logo-placement{
-  width: 70%;
-  padding: 10% 0 0 25%;
 
+@media only screen and (max-width: 600px) {
+  div.logo-placement{
+    width: 90%;
+    padding: 33% 0 0 15%;
+  }
+  a{
+    font-size: 1.25em;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  div.logo-placement{
+    width: 80%;
+    padding: 10% 0 0 25%;
+  }
+  a{
+    font-size: 1.25em;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  div.logo-placement{
+    width:70%;
+    padding: 5% 0 0 30%;
+  }
+  a{
+    font-size: 1.5em;
+  }
+}
+
+.nav.right{
+  float: right;
+  padding: 3em 4em 3em 3em;
+  right: 0px;
 }
