--- a/views/site/index.hbs
+++ b/views/site/index.hbs
@@ -15,6 +15,10 @@
                             <div class="logo-placement">
                                 <a class="square-link" href="https://squareup.com/appointments/book/0R104SMS6SK0C/tony-s-new-york-ny">
                                     {{>logo}}
+                                    <div class="container-images">
+                                        {{>tony}}
+                                        {{>rosie}}
+                                    </div>
                                 </a>
                             </div>
                         </div>
