--- a/views/site/index.hbs
+++ b/views/site/index.hbs
@@ -1,10 +1,12 @@
 <body>
     <div class="column">
-        <div class="nav right">
-            <div class="bookings">
-                <a class="square-link" href="https://squareup.com/appointments/book/0R104SMS6SK0C/tony-s-new-york-ny">
-                    Book Appointment
-                </a>
+        <div class="container-tile col col-md-12">
+            <div class="nav right">
+                <div class="bookings">
+                    <a class="square-link" href="https://squareup.com/appointments/book/0R104SMS6SK0C/tony-s-new-york-ny">
+                        Book Appointment
+                    </a>
+                </div>
             </div>
         </div>
         <div class="index">
