public/stylesheets/style.css

--- a/views/site/index.hbs
+++ b/views/site/index.hbs
@@ -1,13 +1,10 @@
 <body>
     <div class="column">
         <div class="container-tile col col-md-12">
-            <div class="nav right">
-                <div class="bookings">
-                    <a class="square-link" href="https://squareup.com/appointments/book/0R104SMS6SK0C/tony-s-new-york-ny">
-                        Book Appointment
-                    </a>
-                </div>
-            </div>
+            <form class="nav right" action="https://squareup.com/appointments/book/0R104SMS6SK0C/tony-s-new-york-ny">
+                <input class="bookings" type="submit" value="Book Appointment">
+                </input>
+            </form>
         </div>
         <div class="index">
             <div class="width-wrap">
