--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,39 @@ img.rosie{
   padding-left: 10%;
   float:left;
 }
+@media only screen
+and (min-device-width : 375px)
+and (max-device-width : 812px)
+and (-webkit-device-pixel-ratio : 3){
+  input.bookings{
+    display: inline-block;
+    height: 42px;
+    min-width: 80px;
+    padding: 0 2em;
+    border: 1px solid #bec3c8;
+    border-radius: 3px;
+    background-color: #fafafa;
+    font-size: 11px;
+    color: #64696e;
+    line-height: 40px;
+    font-weight: 700;
+    text-align: center;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
+    user-select: none;
+    cursor: pointer;
+  }
+  div.logo-placement{
+    width: 90%;
+    padding: 0% 0 0 15%;
+    right: 20%;
+  }
+  a{
+    font-size: 1.25em;
+  }
+  div.index{
+    margin-top: 20%;
+  }
+}
 @media only screen and (max-width: 600px) {
   div.logo-placement{
     width: 90%;
