--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,27 +20,27 @@ img.rosie{
   padding-left: 10%;
   float:left;
 }
+input.bookings{
+  display: inline-block;
+  height: 42px;
+  min-width: 80px;
+  padding: 0 2em;
+  border: 1px solid #bec3c8;
+  border-radius: 3px;
+  background-color: #fafafa;
+  font-size: 14px;
+  color: #00B7FF;
+  line-height: 40px;
+  font-weight: 700;
+  text-align: center;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
+  user-select: none;
+  cursor: pointer;
+}
 @media only screen
 and (min-device-width : 375px)
 and (max-device-width : 812px)
 and (-webkit-device-pixel-ratio : 3){
-  input.bookings{
-    display: inline-block;
-    height: 42px;
-    min-width: 80px;
-    padding: 0 2em;
-    border: 1px solid #bec3c8;
-    border-radius: 3px;
-    background-color: #fafafa;
-    font-size: 11px;
-    color: #64696e;
-    line-height: 40px;
-    font-weight: 700;
-    text-align: center;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
-    user-select: none;
-    cursor: pointer;
-  }
   div.logo-placement{
     width: 90%;
     padding: 0% 0 0 15%;
@@ -51,6 +51,20 @@ and (-webkit-device-pixel-ratio : 3){
   }
   div.index{
     margin-top: 20%;
+  }
+  input.bookings{
+    height: 60px;
+    /*min-width: 80px;*/
+    /*border: 1px solid #bec3c8;*/
+    /*border-radius: 3px;*/
+    /*background-color: #fafafa;*/
+    font-size: 25px;
+    color: #00B7FF;
+    font-weight: 500;
+    /*text-align: center;*/
+    /*transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;*/
+    /*user-select: none;*/
+    /*cursor: pointer;*/
   }
 }
 @media only screen and (max-width: 600px) {
